# serde-ts

./: .editorconfig  .gitignore  .npmrc  Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json
lib/: Cargo.toml  lib.rs
runtime/: bincode_v1.ts  bincode_v2.ts  serde.ts
suite/: bench.ts  data.ts  generate.rs  package.json  pnpm-lock.yaml  suite.rs  test.ts
suite/schema-proto/: main.proto
