[workspace]
members = ["lib"]
resolver = "3"

[package]
name = "suite"
edition = "2024"

[[bin]]
path = "./suite/generate.rs"
name = "suite"

[dependencies]
serde-reflection = { git = "https://github.com/mrfoxpro/serde-reflection", branch = "expose-codegen" }
serde-generate = { git = "https://github.com/mrfoxpro/serde-reflection", branch = "expose-codegen" }
serde-generate-ts = { path = "./lib" }
bincode = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }
