[workspace]
members = ["lib"]
resolver = "3"

[package]
name = "suite"
edition = "2024"

[[bin]]
path = "./suite/suite.rs"
name = "suite"

[dependencies]
serde-reflection = { version = "0.5", default-features = false }
serde-generate = { version = "0.31", default-features = false }
serde-generate-ts = { path = "./lib" }
bincode = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }
indoc = { version = "2" }
