[package]
name = "serde-generate-ts"
version = "0.0.1"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
indoc = { version = "2" }

serde-reflection = { version = "0.5", default-features = false }
serde-generate = { version = "0.31", default-features = false }

heck = { version = "0.3" }
textwrap = { version = "0.13" }
